--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,7 +1,7 @@
 .callout {
     max-width: 400px;
     margin: 10px;
-    border: 1px solid rgb(0, 0, 0 / 0.1);
+    border: 1px solid black;
     padding: 15px;
     background-color: rgb(48, 75, 140);
     color: white;   
