--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -27,5 +27,5 @@ cite {
     border-top: 1px dotted white;
     text-align: right;
     font-size:  smaller;
-    padding-top: 5px;
+    padding-top: 4%;
 }
