--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,29 @@
+:root {
+    --main-bg-color: rgb(236, 236, 236);
+    --secondary-bg-color: rgb(37, 1, 37);
+    --main-text-color: rgb(37, 1, 37);
+    --main-border-color: rgb(173, 147, 0);
+    --main-link-color: rgb(255, 217, 0);
+}
 main {
     max-width: 800px;
 }
 nav {
-    background-color: darkblue;
+    background-color: var(--secondary-bg-color);
     padding: 10px;
 }
 nav a {
-    color: white;
+    color: var(--main-link-color);
     display: block;
     padding: 20px;
 }
 h1 {
-    color: darkblue;
+    color: var(--main-text-color);
 }
 main img{
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: 1px var(--main-border-color) solid;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
@@ -25,11 +32,11 @@ p{
 }
 aside {
     width: 300px;
-    border: 1px solid black;
+    border: 1px var(--main-border-color) solid;
     margin: 10px;
     padding: 1rem;
-    background-color: rgb(236, 236, 236);
-    color: darkblue;
+    background-color: var(--main-bg-color);
+    color: var(--main-text-color);
 }
 aside img{
     width: 200px;
@@ -37,6 +44,6 @@ aside img{
 }
 footer {
     margin-top: 20px;
-    border-top: 2px solid rgb(22, 22, 58);
+    border-top: 2px solid var(--main-border-color);
     text-align: center;
 }
