--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -45,7 +45,7 @@ header {
     color: var(--main-text-color);
     padding: 10px;
     text-align: center;
-    
+   
 }
 
 header img {
@@ -73,29 +73,29 @@ a {
 .hero {
     position: relative;
     text-align: center;
-    color: white;
+    color: #a13232;
 }
 
-.centertop {
+.hero h1 {
     position: absolute;
-    top: 30%;
+    top: 3%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50%;
+    width: 60%;
     background-color: rgba(0, 0, 0, 0.765);
     text-align: center;
 
 }
-.center {
+.hero article {
     position: absolute;
-    top: 50%;
+    top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
     width: 50%;
     background-color: rgba(255, 255, 255, 0.501);
 }
-.center img {
+.hero article img {
     float : right;
     width: 300px;
     height: auto;
