--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,6 +7,7 @@
     --main-border-color: #6883ba;
     --main-link-color: #f9f9f9;
 }
+
 .martel-regular {
     font-family: "Martel", serif;
     font-weight: 400;
@@ -17,7 +18,6 @@
     font-weight: 400;
     font-style: normal;
 }
-
 
 body{
     font-family: "Martel", serif;
@@ -40,68 +40,169 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.73)
+}
+
 header {
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
     background-color: var(--main-bg-color);
-    color: var(--main-text-color);
-    padding: 10px;
-    text-align: center;
-   
 }
 
 header img {
-    display: block;
-    width: 150px;
-    height: auto;
-    border: 1px var(--main-border-color) solid;
-    padding: 2px;
+    grid-column: 2/4;
+    max-width: fit-content;
+}
+
+header nav {
+    grid-column: 4/7;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+header ul {
+    display: grid;
+    grid-column: 1/5;
+    grid-template-columns: 25% 25% 25% 25%;
+    justify-content: center;
+    align-items: center;
 }
 
 header a {
-    color: var(--main-text-color);
-    text-decoration: none;
-    padding: 2px;
-    background-color: white;
-    border: 2px solid var(--main-border-color);
-    border-radius: 5px;
-    margin: 5px;
-    display: inline-block;
+    border: 2px rgb(120, 120, 120) solid;
+    text-align: center;
+    padding: 2px
 }
-a {
-    color: var(--main-link-color);
-    text-decoration: none;
-}
+
 .hero {
     position: relative;
-    text-align: center;
-    color: #a13232;
+    width: 100%;
+    height: auto;
+
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+    
 }
 
 .hero h1 {
     position: absolute;
-    top: 6rem;
+    text-align: center;
+    top: 3rem;
+    background-color: #404b61;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
-    background-color: rgba(0, 0, 0, 0.765);
-    text-align: center;
-
+    border-radius: 20px;
+    border:3px #000000 solid;
+    color: #f9f9f9;
+    padding: 5px 50px;
+    max-width: 90%;
+    box-sizing: border-box;
+    
 }
-.hero article {
+
+.hero-article {
     position: absolute;
-    top: 10%;
+    top: 15rem;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
     width: 50%;
     background-color: rgba(255, 255, 255, 0.501);
+    box-sizing: border-box;
 }
+
 .hero article img {
-    float : right;
-    width: 300px;
-    height: auto;
-    border: 1px var(--main-border-color) solid;
-    background-color: white;
+    max-width: 25%;
+    float: right;
 }
-section img {
-    display:block;
+
+.history {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 3rem 1fr;
+    border: 2px black solid;
+}
+
+.history img {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    max-width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.history h2 {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.history p:first-of-type {
+    box-sizing: border-box;
+    margin: 2rem;
+    grid-row: 1/3;
+    grid-column: 1/2;
+
+}
+
+.history p:nth-of-type(2) {
+    box-sizing: border-box;
+    margin: 2rem;
+    grid-row: 1/3;
+    grid-column: 3/4;
+}
+
+.adventure {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 4rem 10rem 4rem;
+    border: 2px black solid;
+    justify-content:space-around;
+}
+
+.adventure h2 {
+    grid-column: span 5;
+    grid-row: 1/2;
+    justify-content: center;
+    text-align: center;
+}
+
+.adventure img {
+    max-width: 80%;
+    box-sizing: border-box;
+    order: -1;
+    align-items: center;
+
+}
+
+.adventure p {
+    text-align: center;
+}
+
+footer {
+    background-color:#0c0a3ed0;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+}
+
+footer p {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.sociallinks a {
+    padding: 5px 1rem;
+    display: inline-block;
+    text-decoration: none;
+    color: transparent;
+    font-size: 0;
+
 }
