fixed spellign errors

--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -256,7 +256,7 @@ button {
     align-items: center;
     text-align: center;
     padding: 5px;
-    font-family:"Faculty Glypic", sans-serif;
+    font-family:"Faculty Glyphic", sans-serif;
     border: 1px solid;
     border-radius: 10px;
     width: 200px;
