--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -8,9 +8,7 @@
     --main-link-color: #f9f9f9;
 }
 
-textarea , input {
-    font-family: "Martel", serif;
-}
+
 
 .martel-regular {
     font-family: "Martel", serif;
@@ -22,6 +20,7 @@ textarea , input {
     font-weight: 400;
     font-style: normal;
 }
+
 
 
 body{
@@ -89,7 +88,142 @@ header a {
     padding: 2px
 }
 
-main {
+headerstuff
+
+.hero {
+    position: relative;
+    width: 100%;
+    height: auto;
+
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+    
+}
+
+.hero article h1 {
+    position: absolute;
+    text-align: center;
+    top: -4rem;
+    background-color: #404b61;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    border:3px #000000 solid;
+    color: #f9f9f9;
+    padding: 5px 50px;
+    max-width: 90%;
+    box-sizing: border-box;
+    
+}
+
+.hero-article {
+    position: absolute;
+    top: 15rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    width: 50%;
+    background-color: rgba(255, 255, 255, 0.501);
+    box-sizing: border-box;
+}
+
+.hero article img {
+    max-width: 25%;
+    float: right;
+}
+
+.history {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 3rem 1fr;
+    border: 2px black solid;
+}
+
+.history img {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    max-width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.history h2 {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.history p:first-of-type {
+    box-sizing: border-box;
+    margin: 2rem;
+    grid-row: 1/3;
+    grid-column: 1/2;
+
+}
+
+.history p:nth-of-type(2) {
+    box-sizing: border-box;
+    margin: 2rem;
+    grid-row: 1/3;
+    grid-column: 3/4;
+}
+
+.adventure {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 4rem 10rem 4rem;
+    border: 2px black solid;
+    justify-content:space-around;
+}
+
+.adventure h2 {
+    grid-column: span 5;
+    grid-row: 1/2;
+    justify-content: center;
+    text-align: center;
+}
+
+
+figure {
+    border: 1px #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 80%;
+    margin: auto;
+    align-items: center;
+  }
+
+figcaption {
+    background-color:#86aaf2;
+    color: #000000;
+    font: italic smaller sans-serif;
+    padding: 3px;
+    text-align: center;
+    width: 100%;
+}
+  
+.adventure img {
+    max-width: 80%;
+    box-sizing: border-box;
+    order: -1;
+    align-items: center;
+
+}
+
+.adventure p {
+    text-align: center;
+}
+
+textarea , input {
+    font-family: "Martel", serif;
+}
+
+.contact {
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -183,7 +317,7 @@ form {
     height: auto;
 }
 
-figure {
+.contact figure {
     float: right;
     position: relative;
     border: thin #000000 solid;
@@ -193,7 +327,7 @@ figure {
     margin: auto;
   }
 
-  figcaption {
+  .contact figcaption {
     background-color: var(--main-bg-color);
     color: #ffffff;
     font-family: "Faculty Glyphic", serif;
