--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,5 @@
 :root {
-    --main-bg-color: #0c0a3e;
+    --main-bg-color: rgb(21, 53, 148);
     --secondary-bg-color: #ffffff;
     --main-padding-color: #ffffff;
     --main-text-color: #333;
@@ -7,6 +7,8 @@
     --main-border-color: #6883ba;
     --main-link-color: #f9f9f9;
 }
+
+
 
 .martel-regular {
     font-family: "Martel", serif;
@@ -44,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.73)
+    color: rgb(255, 255, 255);
 }
 
 header {
@@ -81,10 +83,12 @@ header li {
 }
 
 header a {
-    border: 2px rgb(120, 120, 120) solid;
+    border: 2px rgb(255, 255, 255) solid;
     text-align: center;
     padding: 2px
 }
+
+headerstuff
 
 .hero {
     position: relative;
@@ -117,7 +121,7 @@ header a {
 
 .hero-article {
     position: absolute;
-    top: 15rem;
+    top: 20rem;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
@@ -215,8 +219,229 @@ figcaption {
     text-align: center;
 }
 
+textarea , input {
+    font-family: "Martel", serif;
+}
+
+.contact {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 45px 300px 150px 150px 300px ;
+    width: 90%;
+    left: 5%;
+}
+form {
+    position: relative;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    justify-content: center;
+    background-color: rgba(169, 169, 169, 0.483);
+    padding: 20px;
+    border-radius: 10px;
+}
+.map {
+    display:flex;
+    justify-content: center;
+    flex-flow:column nowrap;
+    grid-column: 5/7;
+    grid-row: 2/4;
+    width: 80%;
+    left:50%;
+    transform: translate(-50%);
+    border:#000000 solid 2px;
+    height: 95%;
+    top: 4%
+}
+
+.poi-1{
+    grid-column: 1/5;
+    grid-row: 2/3;
+    display:flex;
+    justify-content: center;
+    margin: 0px;
+    box-sizing: border-box;
+    padding: 15px;
+    border:#000 solid 2px;
+    height: 90%;
+    top: 5%;
+    width: 100%;
+}
+
+.poi-1 img {
+    position: relative;
+    float:right;
+    width: 200px;
+    height: auto;
+}
+
+.poi-2{
+    grid-column: 1/5;
+    grid-row: 3/5;
+    display:flex;
+    justify-content: center;
+    margin: 0px;
+    box-sizing: border-box;
+    padding: 15px;
+    border:#000 solid 2px;
+    height: 90%;
+    top: 5%
+}
+
+.poi-2 img {
+    position: relative;
+    float:right;
+    width: 200px;
+    height: auto;
+}
+
+.poi-3{
+    grid-column: 1/5;
+    grid-row: 5/6;
+    display:flex;
+    justify-content: center;
+    margin: 0px;
+    box-sizing: border-box;
+    padding: 15px;
+    border:#000 solid 2px;
+    height: 90%;
+    top: 5%
+}
+
+.poi-3 img {
+    position: relative;
+    float:right;
+    width: 200px;
+    height: auto;
+}
+
+.contact figure {
+    float: right;
+    position: relative;
+    border: thin #000000 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    margin: auto;
+  }
+
+  .contact figcaption {
+    background-color: var(--main-bg-color);
+    color: #ffffff;
+    font-family: "Faculty Glyphic", serif;
+    padding: 3px;
+    text-align: center;
+    border-radius: 10px;
+  }
+
+.contact-form {
+    display:flex;
+    justify-content: center;
+    flex-flow:column nowrap;
+    grid-column: 5/7;
+    grid-row: 4/6;
+    width: 80%;
+    left:50%;
+    transform: translate(-50%);
+    border:#000000 solid 2px;
+    height: 95%;
+    top: 1%
+}
+
+.contact-info h1{
+    text-align: center;
+}
+
+.contact-info h2{
+    text-align: center;
+}
+
+.contact-info {
+    position:absolute;
+    padding:0px;
+    margin:0px;
+    top: 55%;
+    width: 90%;
+    box-sizing: border-box;
+    font-family: "Martel", serif;
+    
+}
+
+.message {
+    width: 100%;
+}
+
+.message textarea {
+    display: block;
+    padding: 10px;
+    width: 100%;
+    height: 100px;
+    box-sizing: border-box;
+}
+
+.contact-fieldset {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    text-align: center;
+}
+
+button {
+    align-items: center;
+    text-align: center;
+    padding: 5px;
+    font-family:"Faculty Glyphic", sans-serif;
+    border: 1px solid;
+    border-radius: 10px;
+    width: 200px;
+    background-color: rgb(21, 53, 148);
+    color:rgb(255, 255, 255);
+    margin-top: 10px;
+}
+
+button:hover {
+    background-color: rgb(12, 29, 80);
+}
+
+legend{
+    display: none;
+    font-family: "Martel", serif;
+    font-size: 25px;
+    color: #000000;
+    border-color: #000;
+    border: 1px solid #000;
+}
+
+.contact-info p{
+    font-family: "Faculty Glyphic", serif;
+    font-size: 18px;
+    color: #000000;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+    
+}
+
+.mapload iframe {
+    position:absolute;
+    width: 250px;
+    height: 225px;
+    border:#000000 solid 2px;
+    top: 1%;
+    left:50%;
+    transform: translate(-50%);
+    box-sizing: border-box;
+    padding: 15px;
+    border-radius: 20px;
+    margin: 0px;
+}
+
 footer {
-    background-color:#0c0a3ed0;
+    background-color:rgb(21, 53, 148);
     display: grid;
     grid-template-columns: 3fr 2fr;
 }
@@ -236,4 +461,7 @@ footer p {
     font-size: 0;
 
 }
-
+.sociallinks img {
+    max-width: 50px;
+    max-height: 100px;
+}
