--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,9 @@
 :root {
-    --main-bg-color: rgb(21, 53, 148);
+    --main-bg-color: rgba(21, 53, 148, 0.962);
     --secondary-bg-color: #ffffff;
     --main-padding-color: #ffffff;
     --main-text-color: #333;
+    --main-header-color: #da2424;
     --secondary-text-color: #f9f9f9;
     --main-border-color: #6883ba;
     --main-link-color: #f9f9f9;
@@ -39,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Faculty Glyphic", sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #9f1d1d;
+    color: var(--main-header-color);
     margin: 0;
     padding: 0;
 }
@@ -53,6 +54,7 @@ header {
     display: grid;
     grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
     background-color: var(--main-bg-color);
+    background-image: linear-gradient(rgb(21, 53, 148) 45%, rgb(138, 134, 118));
 }
 
 header img {
@@ -94,14 +96,17 @@ header a {
     padding: 20px;
     text-align: center;
 }   
+.title h1:hover {
+    color: #dfdb19;
+    font-size: 34px;
+}
 
 .title h1 {
     font-family: "Faculty Glyphic", sans-serif;
     font-size: 2rem;
-    color: #9f1d1d;
+    color: var(--main-header-color);
     margin: 0;
     padding: 0;
-    background-color: var(--secondary-bg-color);
     border-radius: 10px;
 }
 
@@ -116,6 +121,32 @@ header a {
     width: 100%;
     height: auto;
     
+}
+.call-button {
+    position: absolute;
+    top: 15rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--main-bg-color);
+    color: var(--secondary-text-color);
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-align: center;
+    font-family: "Faculty Glyphic", sans-serif;
+    font-size: 1.5rem;
+    width: 40%;
+    box-sizing: border-box;
+    background-image: radial-gradient(rgb(16, 58, 185, .01) 70%,rgb(138, 134, 118,.5) );
+    
+}
+
+.call-button a {
+    color: var(--main-header-color);
+}
+
+.call-button a:hover {
+    color:#dfdb19;
+    font-size: larger;
 }
 
 .hero article h1 {
@@ -148,6 +179,74 @@ header a {
 .hero article img {
     max-width: 25%;
     float: right;
+}
+
+.description {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 40px 200px 40px 200px 40px;
+    align-items: center;
+    justify-content: center;
+    overflow:hidden;
+}
+
+.description h2 {
+    grid-column: 2/3;
+}
+
+.description p {
+    grid-column: 2/3;
+    text-align: center;
+    font-size: larger;
+}
+
+.description div{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    overflow: hidden;
+}
+
+.description div:nth-of-type(2){
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+
+.description div img {
+    max-width: 300px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.description form {
+    display: flex;
+    height: 200px;
+    width: 350px;
+    box-sizing: border-box;
+    justify-content: center;
+    background-color: rgba(169, 169, 169, .85);
+    padding: 20px;
+    border-radius: 10px;
+    align-items: center;
+    grid-column: 3/4;
+    grid-row: 2/3;
+    flex-direction: column;
+    height: 100%;
+    text-align: center;
+    bottom:15%;
+    margin:15px;
+}
+
+.description section {
+    font-size: larger;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    width: 50%;
+    background-color: rgba(255, 255, 255, 0.501);
+    box-sizing: border-box;
+    grid-column: 1/4;
+    grid-row: 1/2;
 }
 
 .history {
@@ -246,6 +345,7 @@ textarea , input {
     width: 90%;
     left: 5%;
 }
+
 form {
     position: relative;
     display: flex;
@@ -256,7 +356,61 @@ form {
     background-color: rgba(169, 169, 169, 0.483);
     padding: 20px;
     border-radius: 10px;
+    
 }
+
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(140 140 140);
+    font-family: "martel",serif;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    text-align: center;
+    width: 90%;
+  }
+
+th,
+td {
+  border: 1px solid rgb(160 160 160);
+  padding: 8px 10px;
+}
+
+.table1 {
+    grid-column: 1/4;
+    grid-row: 4/7;
+    height:80%;
+    top: 10%;
+}
+
+.table2 {
+    grid-column: 4/7;
+    grid-row: 4/7;
+    height:80%;
+    top: 10%;
+}
+
+.trip p {
+    padding: 0px;
+    margin: 5px;
+}
+
+.trip {
+    display: flex;
+    justify-content: center;
+    flex-flow:column nowrap;
+    grid-column: span 2;
+    grid-row: 1/4;
+    width:80%;
+    padding: 15px;
+}
+.trip img {
+
+    max-width: 80%;
+    padding: 0px;
+    box-sizing: border-box;
+
+}
+
 .map {
     display:flex;
     justify-content: center;
@@ -461,9 +615,10 @@ legend{
 }
 
 footer {
-    background-color:rgb(21, 53, 148);
+    background-color:var(--main-bg-color);
     display: grid;
     grid-template-columns: 3fr 2fr;
+    background-image: linear-gradient(rgb(138, 134, 118), rgb(21, 53, 148)70%);
 }
 
 footer p {
