--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -30,7 +30,7 @@ body{
     font-style: normal;
     font-size: 16px;
     line-height: 1.5;
-    color: #333;
+    color: #000000;
     background-color: #f9f9f9;
     margin: 0;
     padding: 0;
@@ -54,7 +54,7 @@ header {
     display: grid;
     grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
     background-color: var(--main-bg-color);
-    background-image: linear-gradient(rgb(21, 53, 148) 45%, rgb(138, 134, 118));
+    background-image: linear-gradient(rgb(21, 53, 148) 45%, rgb(85, 83, 72));
 }
 
 header img {
@@ -90,25 +90,6 @@ header a {
     padding: 2px
 }
 
-.title {
-    grid-column: 8/10;
-    background-color: var(--primary-bg-color);
-    padding: 20px;
-    text-align: center;
-}   
-.title h1:hover {
-    color: #dfdb19;
-    font-size: 34px;
-}
-
-.title h1 {
-    font-family: "Faculty Glyphic", sans-serif;
-    font-size: 2rem;
-    color: var(--main-header-color);
-    margin: 0;
-    padding: 0;
-    border-radius: 10px;
-}
 
 .hero {
     position: relative;
@@ -127,7 +108,7 @@ header a {
     top: 15rem;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: var(--main-bg-color);
+    background-color: #02043b;
     color: var(--secondary-text-color);
     padding: 10px 20px;
     border-radius: 5px;
@@ -172,8 +153,9 @@ header a {
     transform: translate(-50%, -50%);
     padding: 10px;
     width: 50%;
-    background-color: rgba(255, 255, 255, 0.501);
+    background-color: rgba(255, 255, 255, 0.823);
     box-sizing: border-box;
+    
 }
 
 .hero article img {
@@ -223,7 +205,7 @@ header a {
     width: 350px;
     box-sizing: border-box;
     justify-content: center;
-    background-color: rgba(169, 169, 169, .85);
+    background-color: rgba(255, 255, 255, 0.85);
     padding: 20px;
     border-radius: 10px;
     align-items: center;
@@ -618,7 +600,7 @@ footer {
     background-color:var(--main-bg-color);
     display: grid;
     grid-template-columns: 3fr 2fr;
-    background-image: linear-gradient(rgb(138, 134, 118), rgb(21, 53, 148)70%);
+    background-image: linear-gradient(rgb(85, 83, 72), rgb(21, 53, 148)70%);
 }
 
 footer p {
